--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,6 +3,15 @@ body {
   padding: 0px;
 }
 
+.home-div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  /* color: slategrey; */
+  color: #1976d2;
+}
+
 .form-div {
   display: flex;
   flex-direction: column;
@@ -39,4 +48,17 @@ body {
   padding-right: 20%;
   margin-bottom: 40px;
   align-items: center;
+}
+
+.footer {
+  /* position: sticky; */
+  height: 40px;
+  width: 100%;
+  margin-top: "auto";
+  background-color: #1976d2;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 10px;
 }
